--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8">
 
-  <title>The HTML5 Herald</title>
-  <meta name="description" content="The HTML5 Herald">
+  <title>The Global Box Office</title>
+  <meta name="description" content="The Global Box Office">
   <meta name="author" content="SitePoint">
 
 
@@ -82,7 +82,7 @@
 <div class="col-xs-8 col-md-8">
 <div class="caption1">
   <div class="sub2">
-    <h3>Facebook as an Indicator</h3>
+    <h3>Facebook Likes Becoming Correlated with Success</h3>
   </div>
 </div>
 <div class="col-xs-2 col-md-2"></div>
